--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,5 +1,4 @@
 /* HOME PAGE CSS */
-
 .home {
     flex-grow: 1;
     min-width: 100%;
@@ -7,17 +6,15 @@
     flex-direction: column;
     align-items: center;
 }
-
 .home .title {
     width: 100%;
     font-size: 18px;
     text-align: center; 
 }
-
-.home .title p {
-    line-height: 50px;
+h1, h3 {
+    padding: 5px 20px;
+    color: #afbfc0;
 }
-
 .home .title button {
     border: none;
     outline: none;
@@ -25,25 +22,21 @@
     font-size: 24px;
     margin-top: 30px;
     color: #ffffff;
-    padding: 10px 15px;
+    padding: 10px 20px;
     border-radius: 999px;
     background-color: #9fa4a9;
     font-family: "Roboto", cursive;
 }
-
 .home .person {
     width: 100%;
     margin-top: 20px;
 }
-
 .home .person img {
     width: 80%;
 }
-
 img {
     border-radius: 50%;
 }
-
 @media (min-width: 800px) {
     .home {
         flex-direction: row;
@@ -62,3 +55,81 @@ img {
 }
 
 /* ABOUT PAGE CSS */
+.about {
+    flex-grow: 1;
+}
+.about p {
+    padding: 10px 20px;
+    color: #afbfc0;
+}
+
+/* NAVIGATION CSS */
+.navbar {
+    height: 100%;
+}
+.nav-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.list-wrapper {
+    display: flex;
+    align-items: center;
+}
+.list-wrapper ul li {
+    list-style: none;
+    margin-bottom: 15px;
+}
+.list-wrapper ul li a {
+    display: block;
+    font-size: 24px;
+    padding: 10px 0;
+    color: #afbfc0;
+    text-decoration: none;
+}
+@media (min-width: 800px) {
+    .list-wrapper img {
+      display: none;
+    }
+    .list-wrapper ul {
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      text-align: left;
+      position: relative;
+      background-color: transparent;
+    } 
+    .list-wrapper ul li {
+      display: inline-block;
+      margin-bottom: 0;
+    }  
+    .list-wrapper ul li:not(:last-child) {
+      margin-right: 10px;
+    }  
+    .list-wrapper ul li a {
+      padding: 5px;
+      color: #afbfc0;
+    }  
+    .list-wrapper ul li a:hover {
+      padding: 5px;
+      color: #afbfc0;
+      transform: scale(0.8);
+      background: transparent;
+    }
+}
+
+/* CONTACT PAGE CSS */
+.contact {
+    flex-grow: 1;
+}
+.contact p {
+    color: #afbfc0;
+}
+.contact iframe {
+    border: 0;
+    width: 100%;
+    height: 400px;
+    margin-bottom: 15px;
+}
