--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,7 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
+  font-family: 'Times New Roman', sans-serif;  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #56494c;
 }
@@ -36,10 +33,10 @@ code {
 
 p {
   line-height: 30px;
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+  font-family: 'Times New Roman', sans-serif;
+  font-size: 20px;
 }
 
 h1, h2 {
-  font-family: Roboto, cursive;
+  font-family: 'Times New Roman', sans-serif;
 }
