--- a/src/components/style.css
+++ b/src/components/style.css
@@ -34,7 +34,7 @@ h1, h3 {
 .home .person img {
     width: 80%;
 }
-img {
+.person img {
     border-radius: 50%;
 }
 @media (min-width: 800px) {
@@ -127,9 +127,15 @@ img {
 .contact p {
     color: #afbfc0;
 }
-.contact iframe {
-    border: 0;
-    width: 100%;
-    height: 400px;
-    margin-bottom: 15px;
+
+/* PORTFOLIO PAGE CSS */
+
+.portfolioImg img {
+    width: 200px;
+    height: 200px;
+    border-radius: none;
+}
+
+.portfolio {
+    color: #afbfc0;
 }
