skills update and css update

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -150,3 +150,12 @@ h1, h2, h3, h4 {
     Align-Items: center;
     Justify-Content: center;
 }
+
+/* SKILLS PAGE CSS */
+
+.skillscontent {
+    align-items: center;
+    color: #afbfc0;
+    padding: 0 40px;
+
+}
