--- a/src/components/style.css
+++ b/src/components/style.css
@@ -57,12 +57,6 @@ h1, h2, h3, h4 {
     margin: 0 30px;
 }
 
-/* HEADER CSS */
-
-.headerImg {
-    align-items: center;
-    margin: 0;
-}
 
 /* ABOUT PAGE CSS */
 .about {
@@ -71,6 +65,9 @@ h1, h2, h3, h4 {
 .about p {
     padding: 10px 20px;
     color: #afbfc0;
+}
+.about .container-fluid{
+    width: 85%;
 }
 
 /* NAVIGATION CSS */
@@ -142,7 +139,7 @@ h1, h2, h3, h4 {
     border: 0;
     width: 100%;
     height: 400px;
-    margin-bottom: 15px;
+    margin-top: 15px;
   }
 /* PORTFOLIO PAGE CSS */
 
@@ -160,9 +157,8 @@ h1, h2, h3, h4 {
 
 /* SKILLS PAGE CSS */
 
-.skillscontent {
-    align-items: center;
+.skillscontainer {
     color: #afbfc0;
-    padding: 0 40px;
-
+    padding: 40px;
+    margin: 20px;
 }
